--- a/public/generate-bill/view-order-slips.css
+++ b/public/generate-bill/view-order-slips.css
@@ -266,7 +266,7 @@ button:hover {
     flex-wrap: wrap;
     gap: 15px;
     justify-content: center;
-    max-width: 90%;
+    max-width: 75%;
     max-height: 90%;
     overflow-y: auto;
 }
@@ -281,18 +281,18 @@ button:hover {
     transition: transform 0.3s ease-in-out;
     cursor: pointer;
 }
-
+/* 
 .bill-image:hover {
     transform: scale(1.1);
-}
+} */
 
 /* Full-Screen Overlay for Single Image */
 .full-image-overlay {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
     background: rgba(0, 0, 0, 0.9);
     display: flex;
     align-items: center;
@@ -314,12 +314,6 @@ button:disabled {
     color: #666;
     cursor: not-allowed;
 }
-
-
-
-
-
-
 
 .payment-toast {
     display: none;
